--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "theme_color": "#ff6937",
   "icons": [
     {
-      "src": "https://github.com/Matthieu-Huppii/my-pwa/launch-192.png",
+      "src": "https://matthieu-huppii.github.io/pwa/launch-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://github.com/Matthieu-Huppii/my-pwa/launch-512.png",
+      "src": "https://matthieu-huppii.github.io/pwa/launch-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
